Updated header, sidebar, favicon, and more

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -37,7 +37,7 @@
     <![endif]-->` | safeHTML }}
     {{ "<!-- Icons -->" | safeHTML }}
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
-    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.ico">
     {{ if .RSSLink -}}
     {{ "<!-- RSS -->" | safeHTML }}
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
