--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,10 +1,10 @@
 <div class="sidebar">
 	<div class="container text-center sidebar-sticky">
 		<div class="sidebar-about text-center">
-			<a href="{{ .Site.BaseURL }}"><h1 class="brand">{{ .Site.Title }}</h1></a>
-			{{ with .Site.Params.authorimage }} <img src="{{.}}" alt="Author Image" class="img-circle headshot center"> {{ end }}
+			<!-- <a href="{{ .Site.BaseURL }}"><h1 class="brand">{{ .Site.Title }}</h1></a> -->
+			<a href="{{ .Site.BaseURL }}">{{ with .Site.Params.authorimage }}<img src="{{.}}" alt="Author Image" class="img-circle headshot center"></a> {{ end }}
 			<p class="lead">
-				{{ with .Site.Params.description }} {{.}} {{ else }} Your site's description {{end}}
+				<a href="{{ .Site.BaseURL }}">{{ with .Site.Params.description }} {{.}} {{ else }} Your site's description {{end}}</a>
 			</p>
 		</div>
 		{{ partial "sidebar_menu.html" . }}
